--- a/mesasparapedir.html
+++ b/mesasparapedir.html
@@ -7,7 +7,7 @@
     <title>La cayetana - Mesas para Pedidos</title>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <link rel="shortcut icon" href="logocaye.png" />
-    <link rel="stylesheet" href="/mesasparapedir.css">
+    <link rel="stylesheet" href="mesasparapedir.css">
 </head>
 
 <body>
@@ -338,5 +338,6 @@
         init();
     </script>
 </body>
+
 
 </html>
