--- a/pedidos.html
+++ b/pedidos.html
@@ -7,7 +7,7 @@
     <title>La Cayetana - Tomar Pedidos</title>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <link rel="shortcut icon" href="logocaye.png" />
-    <link rel="stylesheet" href="/pedidos.css">
+    <link rel="stylesheet" href="pedidos.css">
 </head>
 
 <body>
@@ -1112,5 +1112,6 @@
 
     </script>
 </body>
+
 
 </html>
