--- a/finalizar.html
+++ b/finalizar.html
@@ -7,7 +7,7 @@
     <title>La Cayetana - Finalizar Cuenta</title>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <link rel="shortcut icon" href="logocaye.png" />
-    <link rel="stylesheet" href="css/finalizar.css" />
+    <link rel="stylesheet" href="finalizar.css" />
 </head>
 
 <body>
@@ -92,5 +92,6 @@
 
     <script src="finalizar.js"></script>
 </body>
+
 
 </html>
